[package]
name = "sli"
version = "0.1.1"
edition = "2021"
authors = ["userfriend"]
license = "MIT OR Apache-2.0"
description = "A useless CLI tool for interacting with Scratch"
readme = "README.md"
homepage = "https://github.com/userfriendanonymous/claw"
repository = "https://github.com/userfriendanonymous/claw"
keywords = ["cli", "scratch", "interact"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "z"
lto = true

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
directories = "5.0.0"
magic-crypt = "3.1.12"
rand = "0.8.5"
rpassword = "7.2.0"
s2rs = { version = "0.7.15", features = ["cookie"] }
s2rs-derive = "0.1.2"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "fs", "rt-multi-thread"] }
